# cli

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  action.yml  flake.nix
.github/workflows/: rust.yml
src/: container_engine.rs  docker.rs  main.rs  plugin.rs
src/cli/: mod.rs
src/cli/plugin/: build.rs  deploy.rs  mod.rs
