[package]
name = "decky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bollard = "0.14.0"
boolinator = "2.4.0"
clap = { version = "4.1.4", features = ["derive"] }
dockworker = "0.1.0"
flexi_logger = "0.24"
futures = "0.3.25"
log = "0.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.24.2"
