[package]
name = "decky"
version = "0.0.1-alpha.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
boolinator = "2.4.0"
clap = { version = "4.1.4", features = ["derive"] }
flexi_logger = "0.24"
futures = "0.3.25"
glob = "0.3.1"
log = "0.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
users = "0.11.0"
walkdir = "2.3.2"
zip = { version = "0.6.3", deafult-features = false }
