[package]
name = "decky"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
boolinator = "2.4.0"
clap = { version = "4.1.4", features = ["derive"] }
flexi_logger = "0.29"
futures = "0.3.25"
glob = "0.3.1"
itertools = "0.10.5"
log = "0.4"
rand = "0.8.5"
reqwest = "0.11.20"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.7"
tokio = { version = "1.24.2", features = ["full"] }
uzers = "0.12.1"
walkdir = "2.3.2"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
which = "4.4.0"
dirs = "5"
